--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>vaadin-context-menu</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.vaadin.addons</groupId>
+            <artifactId>vaadin-excel-exporter</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.dizitart</groupId>
             <artifactId>nitrite</artifactId>
             <version>2.1.1</version>
