--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,9 @@
             <artifactId>vaadin-context-menu</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.vaadin.addons</groupId>
-            <artifactId>vaadin-excel-exporter</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <groupId>com.vaadin.addon</groupId>
+            <artifactId>tableexport-for-vaadin</artifactId>
+            <version>1.8.0</version>
         </dependency>
         <dependency>
             <groupId>org.dizitart</groupId>
