--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
             <id>vaadin-addons</id>
             <url>http://maven.vaadin.com/vaadin-addons</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencyManagement>
@@ -77,15 +81,15 @@
             <artifactId>vaadin-context-menu</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.vaadin.addon</groupId>
-            <artifactId>tableexport-for-vaadin</artifactId>
-            <version>1.8.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.dizitart</groupId>
             <artifactId>nitrite</artifactId>
             <version>2.1.1</version>
         </dependency>
+        <dependency>
+	    <groupId>com.github.jnash67</groupId>
+	    <artifactId>tableexport-for-vaadin</artifactId>
+	    <version>f6e247d9de</version>
+	</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
