--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.vaadin.addons</groupId>
+            <artifactId>chatbox</artifactId>
+            <version>0.7.4</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
